# py-osmgs

./: App.py  README.md  hackfest_basic_metrics_vnfd.yaml  hackfest_multivdu-vnf.html  hackfest_multivdu-vnf_vnfd.yaml  hackfest_multivdu_vnfd.yaml  pyproject.toml
src/osm-easy-desc-gen/: VDU.py  VNF.py
src/py-osmgs/: VDU.py  VNF.py
tests/: test.py
